--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-masonry-css": "^1.0.16",
     "react-resizable-panels": "^2.1.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
